Add sign out API
